force-app/main/default/objects/Class_Student_Exam__c/fields/Marks_in_Language__c.field-meta.xml
<CustomField>
    <fullName>Marks_in_Language__c</fullName>
    <label>Marks in Language</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>