force-app/main/default/objects/Class_Student_Exam__c/fields/Overall_Result__c.field-meta.xml
<CustomField>
    <fullName>Overall_Result__c</fullName>
    <label>Overall Result</label>
    <length>10</length>
    <type>Text</type>
</CustomField>