force-app/main/default/objects/Class_Student_Exam__c/fields/Result_in_Maths__c.field-meta.xml
<CustomField>
    <fullName>Result_in_Maths__c</fullName>
    <label>Result in Maths</label>
    <length>10</length>
    <type>Text</type>
</CustomField>