force-app/main/default/objects/Class_Student_Exam__c/fields/StudentClassEnrollment__c.field-meta.xml
<CustomField>
    <fullName>StudentClassEnrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StudentClassEnrollment</label>
    <referenceTo>Class_Student__c</referenceTo>
    <relationshipName>StudentExamEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>