force-app/main/default/objects/Class_Student_Exam__c/fields/Total_Mark__c.field-meta.xml
<CustomField>
    <fullName>Total_Mark__c</fullName>
    <formula>Marks_in_Language__c + Marks_in_English__c + Marks_in_Maths__c + Marks_in_Science__c + Marks_in_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>